# SCONE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: TaggedPtr.cpp  TaggedPtr.h  Vector.cpp  Vector.h  VectorFwd.h
test/: CMakeLists.txt  TaggedPtrTestSuite.cpp  VectorTestSuite.cpp
