project (SCONE)

cmake_minimum_required(VERSION 3.11)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

include_directories(PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB_RECURSE SRC ${CMAKE_SOURCE_DIR}/src/*.*)
file(GLOB_RECURSE HDR ${CMAKE_SOURCE_DIR}/src/*.h)

add_library(SCONE ${SRC})
set_target_properties(SCONE PROPERTIES PUBLIC_HEADER "${HDR}")

if(NOT SCONE_BUILD_LIB_ONLY)
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test")
endif()

include(GNUInstallDirs)
install(TARGETS SCONE
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/SCONE")
